fixed responsive navbar collapse

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -131,7 +131,8 @@ nav {
   .github-btn {
     display: none; }
   nav {
-    position: static !important; }
+    position: static !important;
+    height: auto !important; }
   .nav-placeholder {
     display: none; } }
 
