--- a/src/static/sass/imports/components/navbar.scss
+++ b/src/static/sass/imports/components/navbar.scss
@@ -24,6 +24,7 @@ nav {
 
   nav {
     position: static !important;
+    height: auto !important;
   }
 
   .nav-placeholder {
